--- a/phonenum.html
+++ b/phonenum.html
@@ -44,30 +44,23 @@
       letter-spacing: 1px;
       text-transform: uppercase;
     }
-    /* Neon Animated Input Field */
+    /* Glassmorphic Phone Number Input Field with Increased Font Size */
     input[type="tel"] {
       width: 100%;
-      padding: 12px;
-      border: 2px solid #fff;
-      border-radius: 5px;
-      font-size: 1em;
+      padding: 16px;
+      border: 2px solid rgba(255, 255, 255, 0.3);
+      border-radius: 10px;
+      font-size: 1.5em;
       margin-bottom: 15px;
       outline: none;
-      animation: neonInput 2s infinite;
-      font-family: 'Oswald', sans-serif;
+      background: rgba(255, 255, 255, 0.15);
+      backdrop-filter: blur(10px);
+      -webkit-backdrop-filter: blur(10px);
+      color: #fff;
+      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
     }
     input[type="tel"]::placeholder {
-      color: #aaa;
-    }
-    @keyframes neonInput {
-      0%, 100% {
-        border-color: #fff;
-        box-shadow: 0 0 5px rgba(255,255,255,0.2);
-      }
-      50% {
-        border-color: #ff1744;
-        box-shadow: 0 0 15px rgba(255,23,68,0.8), 0 0 15px rgba(255,152,0,0.8);
-      }
+      color: #ccc;
     }
     /* Static Neon Submit Button with Fire Emoji in Label */
     input[type="submit"] {
@@ -100,7 +93,7 @@
     #shockwave-overlay.active {
       display: block;
     }
-    /* Fire Emoji Shockwave – 20 emojis burst outward */
+    /* Ultra-Dope Fire Emoji Shockwave – 20 emojis burst outward */
     #shockwave-overlay .fire {
       position: absolute;
       left: 50%;
