--- a/phonenum.html
+++ b/phonenum.html
@@ -25,13 +25,13 @@
       overflow: hidden;
       color: #fff;
     }
-    /* White Form Container */
+    /* Form Container (Popup Style) */
     .form-container {
       background: #fff;
       border-radius: 15px;
       padding: 20px;
-      width: 90%;
-      max-width: 400px;
+      width: 400px;
+      max-width: 90%;
       text-align: center;
       box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
       position: relative;
@@ -44,23 +44,30 @@
       letter-spacing: 1px;
       text-transform: uppercase;
     }
-    /* Glassmorphic Phone Number Input Field with Increased Font Size */
+    /* Phone Number Input Field with Animated Neon Glow */
     input[type="tel"] {
       width: 100%;
-      padding: 16px;
-      border: 2px solid rgba(255, 255, 255, 0.3);
-      border-radius: 10px;
-      font-size: 1.5em;
+      padding: 12px;
+      border: 2px solid #fff;
+      border-radius: 5px;
+      font-size: 1em;
       margin-bottom: 15px;
       outline: none;
-      background: rgba(255, 255, 255, 0.15);
-      backdrop-filter: blur(10px);
-      -webkit-backdrop-filter: blur(10px);
+      animation: neonInput 2s infinite;
       color: #fff;
-      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
     }
     input[type="tel"]::placeholder {
-      color: #ccc;
+      color: #aaa;
+    }
+    @keyframes neonInput {
+      0%, 100% {
+        border-color: #fff;
+        box-shadow: 0 0 5px rgba(255, 255, 255, 0.2);
+      }
+      50% {
+        border-color: #ff1744;
+        box-shadow: 0 0 15px rgba(255,23,68,0.8), 0 0 15px rgba(255,152,0,0.8);
+      }
     }
     /* Static Neon Submit Button with Fire Emoji in Label */
     input[type="submit"] {
@@ -93,7 +100,7 @@
     #shockwave-overlay.active {
       display: block;
     }
-    /* Ultra-Dope Fire Emoji Shockwave – 20 emojis burst outward */
+    /* Ultra‑Dope Fire Emoji Shockwave – 20 emojis burst outward */
     #shockwave-overlay .fire {
       position: absolute;
       left: 50%;
@@ -158,6 +165,13 @@
     @keyframes textFadeIn {
       from { opacity: 0; }
       to { opacity: 1; }
+    }
+    /* Mobile Popup Styling: 4:5 Aspect Ratio */
+    @media (max-width: 600px) {
+      .form-container {
+        width: 80vw;
+        height: calc(80vw * 5 / 4); /* 4:5 aspect ratio */
+      }
     }
   </style>
 </head>
