--- a/phonenum.html
+++ b/phonenum.html
@@ -25,25 +25,19 @@
       overflow: hidden;
       color: #fff;
     }
-    /* Form Container (Popup Style) */
+    /* Form Container (Centered Popup) */
     .form-container {
       background: #fff;
       border-radius: 15px;
       padding: 20px;
       width: 400px;
       max-width: 90%;
+      text-align: center;
       box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
       position: relative;
       z-index: 1;
-      /* Use flexbox to vertically center the content */
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
     }
-    .form-content {
-      width: 100%;
-    }
-    /* Header with emphasis on "ENTER" */
+    /* Header with Emphasis on "ENTER" */
     .header {
       margin-bottom: 20px;
     }
@@ -79,7 +73,7 @@
     @keyframes neonInput {
       0%, 100% {
         border-color: #fff;
-        box-shadow: 0 0 5px rgba(255,255,255,0.2);
+        box-shadow: 0 0 5px rgba(255, 255, 255, 0.2);
       }
       50% {
         border-color: #ff1744;
@@ -176,33 +170,24 @@
       width: 100%;
       text-transform: uppercase;
       letter-spacing: 1px;
-      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+      text-shadow: 2px 2px 4px rgba(0,0,0,0.7);
     }
     @keyframes textFadeIn {
       from { opacity: 0; }
       to { opacity: 1; }
     }
-    /* Mobile Popup Styling: 4:5 Aspect Ratio */
-    @media (max-width: 600px) {
-      .form-container {
-        width: 80vw;
-        height: calc(80vw * 5 / 4); /* 4:5 aspect ratio */
-      }
-    }
   </style>
 </head>
 <body>
   <div class="form-container">
-    <div class="form-content">
-      <div class="header">
-        <h1>ENTER</h1>
-        <p>to get notified</p>
-      </div>
-      <form id="phone-form" action="#" method="POST">
-        <input type="tel" name="phone" placeholder="Phone Number" required>
-        <input type="submit" value="Submit🔥">
-      </form>
+    <div class="header">
+      <h1>ENTER</h1>
+      <p>to get notified</p>
     </div>
+    <form id="phone-form" action="#" method="POST">
+      <input type="tel" name="phone" placeholder="Phone Number" required>
+      <input type="submit" value="Submit🔥">
+    </form>
   </div>
   <!-- Shockwave Overlay with Fire Emojis and Confirmation Text -->
   <div id="shockwave-overlay">
