--- a/phonenum.html
+++ b/phonenum.html
@@ -33,26 +33,17 @@
       width: 400px;
       max-width: 90%;
       text-align: center;
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
       position: relative;
       z-index: 1;
     }
-    /* Header with Emphasis on "ENTER" */
-    .header {
-      margin-bottom: 20px;
-    }
+    /* Header on one line in black */
     .header h1 {
       font-size: 2.8em;
       text-transform: uppercase;
       letter-spacing: 2px;
-      margin-bottom: 5px;
-      color: #ff1744;
-    }
-    .header p {
-      font-size: 1em;
-      letter-spacing: 1px;
-      margin: 0;
-      color: #333;
+      margin-bottom: 20px;
+      color: #000;
     }
     /* Phone Number Input Field with Animated Neon Glow */
     input[type="tel"] {
@@ -64,7 +55,7 @@
       margin-bottom: 15px;
       outline: none;
       animation: neonInput 2s infinite;
-      color: #fff;
+      color: #000;
       background: transparent;
     }
     input[type="tel"]::placeholder {
@@ -73,7 +64,7 @@
     @keyframes neonInput {
       0%, 100% {
         border-color: #fff;
-        box-shadow: 0 0 5px rgba(255, 255, 255, 0.2);
+        box-shadow: 0 0 5px rgba(255,255,255,0.2);
       }
       50% {
         border-color: #ff1744;
@@ -181,8 +172,7 @@
 <body>
   <div class="form-container">
     <div class="header">
-      <h1>ENTER</h1>
-      <p>to get notified</p>
+      <h1>ENTER TO GET NOTIFIED</h1>
     </div>
     <form id="phone-form" action="#" method="POST">
       <input type="tel" name="phone" placeholder="Phone Number" required>
