--- a/dash5.html
+++ b/dash5.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Neon Bio Dashboard</title>
-  <!-- Include a futuristic font -->
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Futuristic Neon Bio Dashboard</title>
+  <!-- Import the Oswald font -->
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap" rel="stylesheet">
+  <!-- Include Chart.js from CDN -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
-    /* ====================================
-       Global Styles & Resets
-    ==================================== */
+    /* Global Reset */
     * {
       margin: 0;
       padding: 0;
@@ -19,31 +19,28 @@
       width: 100%;
       height: 100%;
       background: #000;
-      font-family: 'Orbitron', sans-serif;
+      font-family: 'Oswald', sans-serif;
       overflow: hidden;
-      color: #fff;
+      color: #00ff00;
     }
-    /* ====================================
-       Full‑screen Particle Background
-    ==================================== */
-    #bgCanvas {
+    /* DNA Helix Animated Background Canvas */
+    #bioCanvas {
       position: fixed;
       top: 0;
       left: 0;
       width: 100%;
       height: 100%;
-      z-index: -1;
+      z-index: 0;
     }
-    /* ====================================
-       Dashboard Container & Layout
-    ==================================== */
+    /* Dashboard Container */
     .dashboard {
       position: relative;
-      padding: 20px;
       z-index: 1;
+      padding: 20px;
       height: 100vh;
       overflow-y: auto;
     }
+    /* Flex container for cards */
     .cards {
       display: flex;
       flex-wrap: wrap;
@@ -51,50 +48,52 @@
       gap: 20px;
       margin-bottom: 40px;
     }
-    /* ====================================
-       Glassmorphic Dashboard Cards (Neon Blue)
-    ==================================== */
+    /* Glassmorphic Dashboard Cards with Pulsating Glow */
     .card {
-      background: rgba(255, 255, 255, 0.05);
-      backdrop-filter: blur(8px);
-      border: 1px solid #00FFFF;
+      background: rgba(0, 0, 0, 0.5);
+      backdrop-filter: blur(10px);
+      border: 2px solid rgba(0,255,0,0.3);
       border-radius: 15px;
       padding: 20px;
       width: 200px;
       text-align: center;
-      box-shadow: 0 0 15px rgba(0, 255, 255, 0.5);
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      transition: transform 0.3s ease;
+      animation: pulseGlow 2s infinite alternate;
     }
     .card:hover {
       transform: scale(1.05);
-      box-shadow: 0 0 25px rgba(0, 255, 255, 0.8);
     }
     .card h2 {
-      font-size: 1.2rem;
+      font-size: 1.2em;
       margin-bottom: 10px;
-      text-shadow: 0 0 5px #00FFFF;
+      text-transform: uppercase;
+      letter-spacing: 1px;
     }
     .metric-value {
-      font-size: 2rem;
+      font-size: 2em;
       font-weight: bold;
-      text-shadow: 0 0 10px #00FFFF;
     }
-    /* ====================================
-       Graph Section Styling
-    ==================================== */
+    /* Graph Container with Glassmorphic & Pulsating Glow */
     .graph-container {
-      background: rgba(255, 255, 255, 0.05);
-      backdrop-filter: blur(8px);
-      border: 1px solid #00FFFF;
+      background: rgba(0, 0, 0, 0.5);
+      backdrop-filter: blur(10px);
+      border: 2px solid rgba(0,255,0,0.3);
       border-radius: 15px;
       padding: 20px;
       max-width: 800px;
       margin: 0 auto;
-      box-shadow: 0 0 15px rgba(0, 255, 255, 0.5);
+      animation: pulseGlow 2s infinite alternate;
     }
-    /* ====================================
-       Responsive Adjustments
-    ==================================== */
+    /* Keyframes for Pulsating Glow Effect */
+    @keyframes pulseGlow {
+      0% {
+        box-shadow: 0 0 20px rgba(0,255,0,0.5);
+      }
+      100% {
+        box-shadow: 0 0 40px rgba(0,255,0,0.8);
+      }
+    }
+    /* Responsive Adjustments */
     @media (max-width: 768px) {
       .cards {
         flex-direction: column;
@@ -107,12 +106,11 @@
   </style>
 </head>
 <body>
-  <!-- Full‑screen canvas for particle network background -->
-  <canvas id="bgCanvas"></canvas>
+  <!-- DNA Helix Animated Background Canvas -->
+  <canvas id="bioCanvas"></canvas>
 
   <!-- Dashboard Content -->
   <div class="dashboard">
-    <!-- Metrics Cards -->
     <div class="cards">
       <div class="card" id="card-users">
         <h2>Total Users</h2>
@@ -137,113 +135,84 @@
     </div>
   </div>
 
-  <!-- ====================================
-       JavaScript Section
-       - Chart.js for the animated graph.
-       - Custom scripts for dynamic updates and background animation.
-  ==================================== -->
-  <!-- Include Chart.js from CDN -->
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script>
     /* ====================================
-       Particle Network Background Animation
+       Neon DNA Helix Animated Background
     ==================================== */
-    const canvas = document.getElementById('bgCanvas');
+    const canvas = document.getElementById('bioCanvas');
     const ctx = canvas.getContext('2d');
-
-    // Set canvas size to window dimensions
     canvas.width = window.innerWidth;
     canvas.height = window.innerHeight;
+    let time = 0;
+    function drawDNA() {
+      // Use a translucent black fill to create a trailing effect.
+      ctx.fillStyle = "rgba(0, 0, 0, 0.1)";
+      ctx.fillRect(0, 0, canvas.width, canvas.height);
+
+      const centerX = canvas.width / 2;
+      const step = 20;           // Vertical spacing between DNA rungs.
+      const amplitude = 50;      // Maximum horizontal displacement.
+      
+      // Set up neon glow effects.
+      ctx.lineCap = 'round';
+      ctx.shadowColor = "#00ff00";
+      ctx.shadowBlur = 10;
+
+      // Draw a series of rungs from top to bottom.
+      for (let y = -step; y < canvas.height + step; y += step) {
+        let angle = (y + time) * 0.05;
+        let xOffset = Math.sin(angle) * amplitude;
+        // Compute positions for the two strands.
+        let leftX = centerX - xOffset;
+        let rightX = centerX + xOffset;
+        // Use the sine value to modulate opacity (simulate depth).
+        let scale = (Math.sin(angle) + 1) / 2; // Ranges from 0 to 1.
+
+        // Draw connecting line ("base pair")
+        ctx.beginPath();
+        ctx.moveTo(leftX, y);
+        ctx.lineTo(rightX, y);
+        ctx.strokeStyle = `rgba(0,255,0,${0.5 + scale * 0.5})`;
+        ctx.lineWidth = 2;
+        ctx.stroke();
+
+        // Draw left strand circle.
+        ctx.beginPath();
+        ctx.arc(leftX, y, 3, 0, Math.PI * 2);
+        ctx.fillStyle = `rgba(0,255,0,${0.5 + scale * 0.5})`;
+        ctx.fill();
+        // Draw right strand circle.
+        ctx.beginPath();
+        ctx.arc(rightX, y, 3, 0, Math.PI * 2);
+        ctx.fillStyle = `rgba(0,255,0,${0.5 + scale * 0.5})`;
+        ctx.fill();
+      }
+      time += 2;
+      requestAnimationFrame(drawDNA);
+    }
+    drawDNA();
+
     window.addEventListener('resize', () => {
       canvas.width = window.innerWidth;
       canvas.height = window.innerHeight;
     });
 
-    // Particle class definition
-    class Particle {
-      constructor(x, y, vx, vy, radius) {
-        this.x = x;
-        this.y = y;
-        this.vx = vx;
-        this.vy = vy;
-        this.radius = radius;
-      }
-
-      update() {
-        this.x += this.vx;
-        this.y += this.vy;
-        // Bounce off canvas edges
-        if (this.x < 0 || this.x > canvas.width) this.vx *= -1;
-        if (this.y < 0 || this.y > canvas.height) this.vy *= -1;
-      }
-
-      draw() {
-        ctx.beginPath();
-        ctx.arc(this.x, this.y, this.radius, 0, Math.PI * 2);
-        ctx.fillStyle = '#00FFFF';
-        ctx.fill();
-      }
-    }
-
-    // Create particles
-    const particles = [];
-    const particleCount = 100;
-    for (let i = 0; i < particleCount; i++) {
-      const x = Math.random() * canvas.width;
-      const y = Math.random() * canvas.height;
-      const vx = (Math.random() - 0.5) * 0.5;
-      const vy = (Math.random() - 0.5) * 0.5;
-      particles.push(new Particle(x, y, vx, vy, 2));
-    }
-
-    // Draw and animate particles with connecting lines
-    function animateParticles() {
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
-      // Update and draw each particle
-      particles.forEach(particle => {
-        particle.update();
-        particle.draw();
-      });
-      // Draw lines between nearby particles
-      for (let i = 0; i < particles.length; i++) {
-        for (let j = i + 1; j < particles.length; j++) {
-          const dx = particles[i].x - particles[j].x;
-          const dy = particles[i].y - particles[j].y;
-          const distance = Math.sqrt(dx * dx + dy * dy);
-          if (distance < 100) {
-            ctx.beginPath();
-            ctx.moveTo(particles[i].x, particles[i].y);
-            ctx.lineTo(particles[j].x, particles[j].y);
-            ctx.strokeStyle = 'rgba(0, 255, 255, 0.1)';
-            ctx.lineWidth = 1;
-            ctx.stroke();
-          }
-        }
-      }
-      requestAnimationFrame(animateParticles);
-    }
-    animateParticles();
-
     /* ====================================
-       Live-Updating Neon Line Chart (Neon Blue)
-       Using Chart.js to simulate real-time data updates.
+       Live-Updating Neon Line Chart
+       (Using Chart.js to simulate real-time data updates)
     ==================================== */
     const ctxChart = document.getElementById('lineChart').getContext('2d');
-
-    // Initial chart data setup
     const chartData = {
       labels: [],
       datasets: [{
         label: 'Live Data',
         data: [],
-        borderColor: '#00FFFF',
-        backgroundColor: 'rgba(0, 255, 255, 0.1)',
-        pointBackgroundColor: '#00FFFF',
-        tension: 0.4, // Smooth curves
+        borderColor: '#00ff00',
+        backgroundColor: 'rgba(0,255,0,0.1)',
+        pointBackgroundColor: '#00ff00',
+        tension: 0.4
       }]
     };
-
-    // Create the line chart
     const lineChart = new Chart(ctxChart, {
       type: 'line',
       data: chartData,
@@ -252,22 +221,20 @@
         scales: {
           x: {
             display: true,
-            ticks: { color: "#00FFFF" },
-            grid: { color: 'rgba(0, 255, 255, 0.1)' }
+            ticks: { color: "#00ff00" },
+            grid: { color: 'rgba(0,255,0,0.1)' }
           },
           y: {
             display: true,
-            ticks: { color: "#00FFFF" },
-            grid: { color: 'rgba(0, 255, 255, 0.1)' }
+            ticks: { color: "#00ff00" },
+            grid: { color: 'rgba(0,255,0,0.1)' }
           }
         },
         plugins: {
-          legend: { labels: { color: "#00FFFF" } }
+          legend: { labels: { color: "#00ff00" } }
         }
       }
     });
-
-    // Function to add a new data point every second
     setInterval(() => {
       const now = new Date();
       const timeLabel = now.getHours() + ":" + now.getMinutes() + ":" + now.getSeconds();
@@ -283,7 +250,6 @@
 
     /* ====================================
        Dynamic Dashboard Metrics Update
-       Randomly update card values every 5 seconds
     ==================================== */
     function updateMetrics() {
       document.getElementById('users-value').textContent = Math.floor(Math.random() * 10000);
